Fix spacing for successing lqip__wrappers

--- a/src/styles/atoms/img.scss
+++ b/src/styles/atoms/img.scss
@@ -7,11 +7,13 @@ img {
 p img,
 p figure,
 p video,
-p iframe {
+p iframe,
+.lqip__wrapper {
   & + img,
   & + figure,
   & + video,
-  & + iframe {
+  & + iframe,
+  & + .lqip__wrapper {
     margin-top: $golden-rem / 4;
   }
 }
